<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ChefTubeDialog"
    >

    <EditText
        android:id="@+id/currentPasswordEditText"
        style="@style/ChefTubeEditText"
        android:layout_width="0dp"
        android:autofillHints="password"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/newPasswordEditText"
        style="@style/ChefTubeEditText"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:autofillHints="newPassword"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentPasswordEditText"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        style="@style/ChefTubeEditText"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:autofillHints="newPassword"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordEditText"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/saveButton"
        style="@style/ChefTubeButton.Positive"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/ChefTubeButton.Negative"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
