<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/imageLoaderRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/dark_green"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <TextView
        android:id="@+id/requiredTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/required"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/validationImageView"
        app:layout_constraintEnd_toStartOf="@+id/validationImageView"
        app:layout_constraintTop_toTopOf="@+id/validationImageView"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/validationImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_round_corner_15"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/validation_icon"
        android:src="@drawable/ic_invalid_24"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_red" />

    <ImageButton
        android:id="@+id/loadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/load_image_from_gallery"
        android:src="@drawable/ic_add_image_48"
        android:backgroundTint="@color/primary_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/clickHereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/click_to_edit"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/loadImageButton"
        app:layout_constraintStart_toStartOf="@+id/loadImageButton"
        app:layout_constraintTop_toBottomOf="@id/loadImageButton"
        tools:ignore="TextContrastCheck" />

    <FrameLayout
        android:id="@+id/recipeImageFrame"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/black"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="w,4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loadImageButton">

        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerInside"
            android:visibility="gone"
            tools:src="@drawable/recipe_01" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>